# prebio

./: .gitignore  CMakeLists.txt  Dockerfile  generate_boxes.py  generate_boxes_docker.py  generate_microenvs_docker.py  pyproject.toml  readme.md  requirements.yaml
ApChem/: setup.py
ApChem/ApChem/: exceptions.py  utils.py
ApChem/ApChem/cif/: PiscesCIFProducer.py  __init__.py  alphafold.py  cif_utils.py  datasets.py  doc_split.py  docker_utils.py  patch.py  types.py
ApChem/ApChem/cif/archive/: __init__.py  add_H_ligands_to_cif.py  correct_mol2.py  download_protein_ligands.py  prepare_H_mol2_files.py  prepare_ligand_H_cif_files.py  time_fw2.py
ApChem/ApChem/pdb/: __init__.py  cif_utils.py
ApChem/cli/: process_cif_files.py
data/cif/: 3nir.cif  3nir.fw2.sasa.cif  6ij6.cif  6ij6.fw2.sasa.cif
prebio/: __init__.py
prebio/cpp/bindings/: BlazeBindings.h  PyListToBlaze.h  PyListToVector.h  bindings.cpp
prebio/cpp/include/: AdHocSnapshotProducer.h  Atom.h  AtomicCollection.h  AtomicCollectionTransformers.h  AtomicRadius.h  BadCif.h  BadSnapshot.h  BoxBuilder.h  CenteredBoxBuilder.h  ChannelExtractor.h  ChannelSmootherCreator.h  ChannelTag.h  CodeChainResidue.h  ConnectivityBuilder.h  Constants.h  ContiguousDataStore.h  CoordinateTransformation.h  CrConnectivity.h  DataKey.h  DiscretizedSpace.h  Example.h  ExampleMaker.h  FileAndPoint.h  FileChainResidue.h  FileChainResidueLabel.h  Gauss3dFunction.h  GemmiConvertUtils.h  GemmiDocUtils.h  GemmiDocumentCreator.h  GroupBy.h  IdAndPoint.h  InferenceExtractor.h  LocalDocumentCreator.h  LruCache.h  MarkUtils.h  Mesh.h  MultipleElementChannel.h  NumericTraits.h  OGPipeline.h  OneHotExtractor.h  (+15 more)
prebio/cpp/src/: AdHocSnapshotProducer.cpp  Atom.cpp  AtomicCollection.cpp  AtomicCollectionTransformers.cpp  AtomicCollectionTransformers_CodeChainResidue.cpp  AtomicCollectionTransformers_WholeProtein.cpp  AtomicRadius.cpp  BadCif.cpp  CenteredBoxBuilder.cpp  ChannelTag.cpp  ConnectivityBuilder.cpp  ContiguousDataStore.cpp  CrConnectivity.cpp  DataKey.cpp  DiscretizedSpace.cpp  GemmiConvertUtils.cpp  LocalDocumentCreator.cpp  PhysicalPropertiesChannel.cpp  SupervisedGemmiExampleMaker.cpp  TensorFlowConverter.cpp
scripts/: generate_microenvs.py  preprocess.py  run_pipeline.sh
